# smart-home-network-system

./: CMakeLists.txt  README.md
include/client/: Client.h
include/devices/: Device.h  Light.h  SecurityCamera.h  Thermostat.h
include/network/: ARPTable.h  NetworkConfig.h  RoutingTable.h  SubnetManager.h
include/protocol/: HttpProtocol.h  ICMPHandler.h
include/server/: ClientHandler.h  Server.h
include/utils/: Logger.h  SocketSystem.h  SocketUtils.h  ThreadPool.h
src/client/: Client.cpp  main_client.cpp
src/devices/: Device.cpp  Light.cpp  SecurityCamera.cpp  Thermostat.cpp
src/network/: ARPTable.cpp  NetworkConfig.cpp  RoutingTable.cpp  SubnetManager.cpp
src/protocol/: HttpProtocol.cpp  ICMPHandler.cpp
src/server/: ClientHandler.cpp  Server.cpp  main_server.cpp
src/utils/: Logger.cpp  SocketSystem.cpp  ThreadPool.cpp
tests/: test_devices.cpp  test_network.cpp  test_protocol.cpp  test_server.cpp
